# cpp-playground

./: .clang-format  .clang-tidy  .gitignore  .travis.yaml  .travis.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  README.md  asio_http_client.cpp  asio_tcp_clients.cpp  build_push_docker.sh  compare_less_set.cpp  construct_move_destroy.cpp  container_set.cpp  container_set_test.cpp  cpptest.hpp  ctor_dtor_throws.cpp  find_missing_numbers.cpp  floating_point_number.cpp  func_over_load_ride_hide.cpp  helloworld.cpp  objects_alignment.cpp  reverse_letters.cpp  rule_three_five_zero.cpp  run_ci.sh  stringstream_thread_safe.cpp  throw_exception_deconstructor.cpp  time_duration_clock.cpp  type_erasure.cpp  unsigned_int_wrap.cpp
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
algorithms/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  array_find_common_elements.cpp  array_find_max_diff.cpp  array_find_missing_numbers.cpp  array_find_sum_pair.cpp  array_hour_glass_sum.cpp  array_is_rotate.cpp  array_manipulation.cpp  array_mine_sweeper.cpp  array_minimum_bribes.cpp  array_minimum_swaps.cpp  array_rotate.cpp  array_sum_pair.cpp  base.cpp  base.hpp  container_set_key.cpp  hash_table_separate_chainning.cpp  random.hpp  string_char_frequency.cpp  string_char_is_one_away.cpp  string_char_non_repeating.cpp  string_find_repeat_times.cpp  string_reverse_letters.cpp  testmain.cpp  tree_find_nearest_neighbour.cpp  tree_ordered_map.cpp
algorithms/array/: binary_search_rotated_array.cpp  find_common_elements.cpp  find_max_diff.cpp  find_missing_numbers.cpp  find_sum_pair.cpp  hour_glass_sum.cpp  is_rotate.cpp  manipulation.cpp  merge_pairs.cpp  mine_sweeper.cpp  minimum_bribes.cpp  minimum_swaps.cpp  multipy_range.cpp  pair_sum_in_parallel.cpp  rotate.cpp  sum_pair.cpp  sum_three_some.cpp
algorithms/geom/: find_line_intersection.cpp
algorithms/hash_table/: separate_chainning.cpp
algorithms/link_list/: add_two_integers.cpp  find_circular_loop.cpp  flatten_nested_link_list.cpp  merge_two_sorted_link_list.cpp
algorithms/math/: x_power_y.cpp
algorithms/set/: set_key.cpp
algorithms/sort/: quick_sort.cpp  sort_two_direction.cpp  stack_sort.cpp
algorithms/string/: char_frequency.cpp  char_is_one_away.cpp  char_non_repeating.cpp  find_repeat_times.cpp  reverse_letters.cpp
algorithms/tree/: directed_acyclic_graph.cpp  directed_graph.cpp  find_nearest_neighbour.cpp  find_nearest_octree.cpp  flatten_bst_into_linked_list.cpp  lru_cache.cpp  ordered_map.cpp  tree_compare.cpp  tree_manipulate.cpp  visit_tree.cpp
examples/: CMakeLists.txt  asio_tcp_clients.cpp  continuable_asio.cpp  continuable_hello_world.cpp  coroutine_generator.cpp  fiber_shared_work.cpp  logger.cpp  logger.hpp  openmp_vs_std.cpp  rule_three_five_zero.cpp  tag_dispatch.cpp  time_generation.cpp  unsigned_int_wrap.cpp
include/: cpptest.hpp
jenkins/: Jenkinsfile
logger/: CMakeLists.txt
samples/: CMakeLists.txt  asio_http_client.cpp  continuable_asio.cpp  coroutine_generator.cpp  coroutine_multi_task.cpp  coroutine_task.cpp  logging_spdlog.cpp  stringstream_thread_safe.cpp  thread_id.hpp
scripts/: run_build_and_test.sh
src/algorithm/: CMakeLists.txt  array_find_max_diff.cpp  array_hour_glass_sum.cpp  array_minimum_swaps.cpp  hash_table_open_addressing.cpp  hash_table_separate_chainning.cpp  string_char_non_repeating.cpp  tree_ordered_map.cpp
src/asio/: CMakeLists.txt  asio_http_client.cpp
src/asio_samples/: CMakeLists.txt
src/cpp/: CMakeLists.txt  object_id.hpp  steady_system_clock.cpp  time_duration_clock.cpp  time_generation.cpp
src/cpp_samples/: CMakeLists.txt  file_system.cpp  lock_guard.cpp  objects_alignment.cpp  steady_system_clock.cpp  stringstream_thread_safe.cpp  unsigned_int_wrap.cpp
src/data_structures_algorithms/: CMakeLists.txt  array_find_common_elements.cpp  array_find_max_diff.cpp  array_find_missing_numbers.cpp  array_find_stock_profit.cpp  array_find_sum_pair.cpp  array_hour_glass_sum.cpp  array_is_rotate.cpp  array_mine_sweeper.cpp  array_minimum_bribes.cpp  array_minimum_swaps.cpp  array_rotate.cpp  array_sum_pair.cpp  find_missing_numbers.cpp  string_char_frequency.cpp  string_char_is_one_away.cpp  string_char_non_repeating.cpp  string_find_repeat_times.cpp  tree_find_nearest_neighbour.cpp  tree_ordered_map.cpp
